[tool.poetry]
name = "pirotecniaecommerce"
version = "0.1.0"
description = ""
authors = ["remigio furini <remifurini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
django = "5.0.3"
django-rest-framework = "^0.1.0"
black = "^24.2.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
